Upgrade to Gatling 3.1.2